--- a/themes/indigo-card/_config.yml
+++ b/themes/indigo-card/_config.yml
@@ -104,11 +104,13 @@ less:
     - source/css/style.less
 
 # 是否开启多说评论，填写你在多说创建的站点二级域名
-duoshuo: shenzhenjs
+# duoshuo: shenzhenjs
 # 是否开启多说评论计数（该服务不稳定）
 duoshuo_count: false
 # 使用 disqus 时关闭多说评论
 disqus_shortname: false
+# 使用 网易云跟贴，填写你在云跟贴时的productKey
+gentie: 1562b148aa134cc59b21d5ec82a863a9
 
 # 规范网址
 # 让搜索引擎重定向你的不同域名、不同子域、同域不同目录的站点到你期望的路径
